DeveloperOrg/force-app/main/default/objects/position__c/fields/HR_number__c.field-meta.xml
<CustomField>
    <fullName>HR_number__c</fullName>
    <label>HR number</label>
    <type>Phone</type>
</CustomField>