DeveloperOrg/force-app/main/default/objects/position__c/fields/max_budget__c.field-meta.xml
<CustomField>
    <fullName>max_budget__c</fullName>
    <label>max budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>