DeveloperOrg/force-app/main/default/objects/position__c/fields/Milestone_date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_date__c</fullName>
    <label>Milestone date</label>
    <type>Date</type>
</CustomField>