DeveloperOrg/force-app/main/default/objects/position__c/fields/Number_of_vacancies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_vacancies__c</fullName>
    <label>Number of vacancies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>