DeveloperOrg/force-app/main/default/objects/position__c/fields/passport__c.field-meta.xml
<CustomField>
    <fullName>passport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>passport</label>
    <type>Checkbox</type>
</CustomField>