DeveloperOrg/force-app/main/default/objects/position__c/fields/position_discripition__c.field-meta.xml
<CustomField>
    <fullName>position_discripition__c</fullName>
    <label>position discripition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>