DeveloperOrg/force-app/main/default/objects/position__c/fields/POSITION_status__c.field-meta.xml
<CustomField>
    <fullName>POSITION_status__c</fullName>
    <label>POSITION status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Position</fullName>
            </value>
            <value>
                <fullName>Open Approved</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Recruited</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>