DeveloperOrg/force-app/main/default/objects/position__c/fields/skills__c.field-meta.xml
<CustomField>
    <fullName>skills__c</fullName>
    <label>skills</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>